--- a/Assignments/Assignment-3/styles/home.css
+++ b/Assignments/Assignment-3/styles/home.css
@@ -33,6 +33,12 @@ body {
 	color: #2a2a2a;
 }
 
+.header .logo{
+    font-family: cursive;
+    color: coral;
+	font-weight: 600;
+}
+
 .main-nav ul li a {
 	text-decoration: none;
 	color: #2a2a2a;
