--- a/Assignments/Assignment-3/styles/home.css
+++ b/Assignments/Assignment-3/styles/home.css
@@ -5,10 +5,20 @@
 }
 
 body {
-	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	line-height: 1.6;
+	color: rgb(76, 75, 75);
 }
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+p {
+	font-family: Georgia, "Times New Roman", Times, serif;
+}
 .header {
 	display: flex;
 	flex-direction: row;
@@ -19,9 +29,9 @@ body {
 	padding: 30px 60px;
 	position: sticky;
 	top: 0;
-    right:0;
-    left:0;
-    box-shadow: 1px 2px 15px rgba(198, 198, 198, 0.191);
+	right: 0;
+	left: 0;
+	box-shadow: 1px 2px 15px rgba(198, 198, 198, 0.191);
 }
 
 .main-nav ul {
@@ -33,9 +43,9 @@ body {
 	color: #2a2a2a;
 }
 
-.header .logo{
-    font-family: cursive;
-    color: coral;
+.header .logo {
+	font-family: cursive;
+	color: coral;
 	font-weight: 600;
 }
 
@@ -51,27 +61,32 @@ body {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-    align-items: center;
-	padding: 50px;
-	/* background-color: #f8f8f8; */
+	align-items: center;
+	padding: 60px;
 }
 .recipe-deet {
 	display: flex;
 	flex-direction: row;
-	padding: 50px 0;
+	padding: 60px 0;
+	justify-content: space-between;
+	gap: 40px;
 }
-.hero-text{
-    width: 45%;
+.hero-text {
+	width: 45%;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
 }
-.hero-img{
-    width: 45%;
+.hero-img {
+	width: 45%;
 }
-.hero-img img{
-    border: none;
-    border-radius: 16px;
+.hero-img img,
+.recipe-img img {
+	border: none;
+	border-radius: 16px;
 }
 .hero-section h1 {
-    font-weight: 600;
+	font-weight: 600;
 	font-size: 36px;
 	color: #2a2a2a;
 }
@@ -80,7 +95,6 @@ body {
 }
 
 .hero-section p {
-	margin-top: 20px;
 	font-size: 16px;
 }
 
@@ -90,10 +104,45 @@ body {
 	margin-top: 20px;
 }
 
-.featured-recipe-section,
-.contact-section {
+.featured-recipe-section {
+	padding: 60px;
+}
+.featured-recipe-section h2 {
 	text-align: center;
-	padding: 60px ;
+	font-size: 40px;
+}
+.recipe-text,
+.recipe-img {
+	width: 45%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+	gap: 15px;
+}
+.recipe-img img {
+	border-radius: 100%;
+	max-width: 450px;
+	object-fit: cover;
+}
+.recipe-text h3 {
+	font-size: 28px;
+	color: coral;
+}
+.btn-nav {
+	padding: 30px 60px;
+}
+.button {
+	background-color: coral;
+	border: none;
+	border-radius: 10px;
+	font-weight: 600;
+	padding: 16px;
+	cursor: pointer;
+}
+.button a {
+	text-decoration: none;
+	color: white;
 }
 
 .section-title {
@@ -104,66 +153,77 @@ body {
 .footer {
 	text-align: center;
 	padding: 20px 0;
-	background-color:coral;
+	background-color: coral;
 	color: white;
 }
 
 /* Responsive Styling */
 @media only screen and (max-width: 768px) {
-	.main-nav ul li {
-		display: block;
-		margin-bottom: 10px;
-	}
-
-	.main-nav a {
-		font-size: 16px;
-	}
-
-	.hero-section {
+	.header {
 		padding: 30px;
 	}
 
-	.hero-section h1 {
-		font-size: 28px;
+	.nav a {
+		font-size: 14px;
 	}
 
-	.hero-section p {
-		font-size: 16px;
+	.section-title {
+		font-size: 32px;
+	}
+
+	.hero-section,
+	.featured-recipe-section {
+		padding: 30px;
+	}
+
+	.hero-section h1,
+	.featured-recipe-section h2 {
+		font-size: 28px;
+	}
+	.recipe-deet {
+		padding: 30px 0;
+	}
+	.recipe-deet h3 {
+		font-size: 24px;
+	}
+	.hero-section p,
+	.featured-recipe-section p {
+		font-size: 14px;
 	}
 }
 
 @media only screen and (max-width: 480px) {
-	.main-nav {
-		text-align: center;
+	.header {
+		flex-direction: column;
+		gap: 5px;
+		padding: 18px;
 	}
-
-	.main-nav ul {
-		padding-top: 10px;
+	.header .logo {
+		font-size: 16px;
 	}
-
-	.main-nav ul li {
-		display: block;
-		margin-bottom: 10px;
+	.main-nav ul li a {
+		font-size: 14px;
 	}
-
-	.hero-section {
-		padding: 20px;
+	.hero-section, .recipe-deet{
+        flex-direction: column;
+		padding: 18px;
 	}
+    .hero-text, .hero-img, .recipe-img, .recipe-text{
+        width:100%;
+    }
+    .recipe-deet{
+        padding: 20px 0;
+    }
+    .featured-recipe-section{
+        padding: 18px;
+    }
 
-	.hero-section h1 {
-		font-size: 24px;
+	.hero-section h1 , .featured-recipe-section h2{
+		font-size: 22px;
 	}
 
 	.hero-section p {
 		font-size: 14px;
-	}
-
-	.hero-image {
-		margin-top: 10px;
-	}
-
-	.section-title {
-		font-size: 24px;
 	}
 
 	.site-footer {
